--- a/label_studio_ml/examples/the_simplest_backend/Dockerfile
+++ b/label_studio_ml/examples/the_simplest_backend/Dockerfile
@@ -1,5 +1,9 @@
 FROM python:3.7
 
+# Install any needed packages
+RUN apt-get update && apt-get install -y \
+    libgl1-mesa-glx
+
 WORKDIR /tmp
 COPY requirements.txt .
 
@@ -10,10 +14,9 @@ ENV PYTHONUNBUFFERED=True \
 RUN --mount=type=cache,target=$PIP_CACHE_DIR \
     pip install -r requirements.txt
 
-
 COPY uwsgi.ini /etc/uwsgi/
 COPY supervisord.conf /etc/supervisor/conf.d/
-
+COPY Sognefjord-Yolov8.pt /app/Sognefjord-Yolov8.pt
 WORKDIR /app
 
 COPY *.py /app/
