--- a/label_studio_ml/examples/the_simplest_backend/requirements.txt
+++ b/label_studio_ml/examples/the_simplest_backend/requirements.txt
@@ -1,6 +1,8 @@
 click==7.1.2
-label-studio-ml==1.0.8
-label-studio-sdk>=0.0.21
+label-studio-ml
+label-studio-sdk
+label-studio-tools
 rq==1.10.0
 supervisor==4.2.2
 uwsgi==2.0.19.1
+ultralytics
